# framing-induced-variance

./: .env.example  .gitignore  README.md  SUBMISSION.md  pyproject.toml
benchmarks/: __init__.py  fiv_tabfact.py  fiv_variants.py  framing.py  framing_vision.py  metric.py  models.py  runner.py  stats.py  vision.py
benchmarks/adapters/: __init__.py  external.py  misviz.py  misviz_synth.py  scshortcut.py  tabfact.py
configs/: baseline.yaml  skeptic.yaml
configs/example/: hooks.py  multivac.yaml  tools.py
media/: fiv_cinematic.tape  fiv_demo.tape
paper/: fiv_figures.R  fiv_report.tex
results/: all_benchmarks_summary.csv  external_finqa.json  external_truthfulqa.json  finqa_protocol_ablation.json  fiv_by_framing.csv  fiv_rates.csv  fiv_spec_curve.csv  fiv_tabfact_scaled.json  fiv_variants.json
scripts/: clean_repo.sh  demo.py  demo_cinematic.py  emit_fig_csvs.py  run_external.py  run_fiv_concurrent.py  run_fiv_scaled.py  run_fiv_variants.py
src/multivac/: __init__.py  __main__.py  build.py  cli.py  compaction.py  config.py  harness.py  (+8 more)
tests/: test_bench_models.py  test_charts_present.py  test_classify_final_answer.py  test_classify_wordboundary.py  test_config.py  test_context_events.py  test_daemon.py  test_deliberate_answer.py  test_demo_cached.py  test_external_adapters.py  test_external_runner_match.py  test_fiv_tabfact.py  test_framing.py  test_framing_vision.py  test_harness.py  test_harness_vision.py  test_live_vision.py  test_metric.py  test_misviz_adapter.py  test_misviz_synth_adapter.py  test_scshortcut_adapter.py  test_stats.py  test_vision_ask.py
(+12 files in other folders)
