[project]
name = "multivac"
version = "0.1.0"
description = "Multi-Vac — a generic, config-driven agent harness (Pydantic AI) with skills, hooks, MCP, sub-agents, compaction, and a daemon-first CLI."
requires-python = ">=3.11"
dependencies = [
  "pydantic-ai>=2.0",
  "pydantic>=2.7",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
# Heavier deps used once we wire real datasets / rendering (NOT needed for the base harness).
data = ["pandas>=2.2", "matplotlib>=3.8"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
multivac = "multivac.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/multivac"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
